        A new function, reqscript(), is available as a safer alternative to script_environment()
        Lua viewscreens can choose not to intercept the OPTIONS keybinding
    New internal commands
        kill-lua: Interrupt running Lua scripts
    New plugins
        confirm: Adds confirmation dialogs for several potentially dangerous actions
    New scripts
        burial:  sets all unowned coffins to allow burial ("-pets" to allow pets too)
        fix-ster:  changes fertility/sterility of animals or dwarves
        view-item-info: adds information and customisable descriptions to item viewscreens
        warn-starving:  check for starving, thirsty, or very drowsy units and pause with warning if any are found
    New tweaks
        kitchen-keys: Fixes DF kitchen meal keybindings
        kitchen-prefs-color: Changes color of enabled items to green in kitchen preferences
        kitchen-prefs-empty: Fixes a layout issue with empty kitchen tabs
    Fixes
        Plugins with vmethod hooks can now be reloaded on OS X
        Lua's os.system() now works on OS X
        Fixed default arguments in Lua gametype detection functions
        Circular lua dependencies (reqscript/script_environment) fixed
        Prevented crash in Items::createItem()
        buildingplan: Now supports hatch covers
        gui/create-item:
          - fixed assigning quality to items
          - made "esc" work properly
        gui/gm-editor handles lua tables properly
        manipulator: fixed crash when selecting custom professions when none are found
        remotefortressreader: fixed crash when attempting to send map info when no map was loaded
        search: fixed crash in unit list after cancelling a job
        stockpiles: now checks/sanitizes filenames when saving
        stocks: fixed a crash when right-clicking
        steam-engine:
          - fixed a crash on arena load
          - number keys (e.g. 2/8) take priority over cursor keys when applicable