@@ -121,6 +121,7 @@ if (BUILD_SUPPORTED)
     DFHACK_PLUGIN(filltraffic filltraffic.cpp)
     DFHACK_PLUGIN(fix-armory fix-armory.cpp)
     DFHACK_PLUGIN(fixpositions fixpositions.cpp)
+    DFHACK_PLUGIN(fix-unit-occupancy fix-unit-occupancy.cpp)
     DFHACK_PLUGIN(fixveins fixveins.cpp)
     DFHACK_PLUGIN(flows flows.cpp)
     DFHACK_PLUGIN(follow follow.cpp)
